--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -9,7 +9,9 @@
   --vp-c-brand-2: var(--lightblue);
   --vp-c-brand-3: var(--orange);
 
-  --vp-c-text-1: var(--darkblue);
+  --vp-c-text-1: #333;
+
+  --vp-nav-logo-height: 100px;
 }
 
 /********** Custom styles **********/
@@ -24,10 +26,19 @@
 /* Header */
 .VPNavBarTitle .title {
   font-size: 1.75em !important;
+  color: var(--vp-c-brand-1) !important;
 }
 
 .VPNavBarMenuLink {
   font-size: 1.05em !important;
+}
+
+body h1, body h2 {
+  color: var(--vp-c-brand-1) !important;
+}
+
+body h3 {
+  color: var(--vp-c-brand-2) !important;
 }
 
 /* Container widths */
@@ -40,6 +51,20 @@
   }
 }
 
+/* Publications page */
+.publication-info {
+  color: var(--vp-c-text-1) !important;
+  transition: color 0.2s ease-in-out;
+}
+
+.publication:hover {
+  background: #f5f5f5 !important;
+}
+
+.publication-info:hover {
+  color: var(--vp-c-brand-2) !important;
+}
+
 /* Team page */
 .VPTeamPage {
   margin: 0 !important;
@@ -47,4 +72,9 @@
 
 vpi-social-website {
   display: none !important;
+}
+
+/* Sidebar */
+.publication-sidebar h2 {
+  color: var(--vp-c-brand-2) !important;
 }
