--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -74,6 +74,10 @@ vpi-social-website {
   display: none !important;
 }
 
+.vpi-social-linkedin {
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='M2 12h20M12 2a15 15 0 0 0 0 20a15 15 0 0 0 0-20'/%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3C/g%3E%3C/svg%3E") !important;
+}
+
 /* Sidebar */
 .publication-sidebar h2 {
   color: var(--vp-c-brand-2) !important;
